rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spark
