setup.yaml
kind: Pod
apiVersion: v1
metadata:
  name: secret-test-pod
  labels:
    name: secret-test
spec:
  volumes:
  - name: config-volume
    configMap:
      name: s3
  - name: secret-volume
    secret:
      secretName: s3
  containers:
  - name: aws-copy
    image: mcowger/aws-cli:latest
    volumeMounts:
    - name: config-volume
      readOnly: true
      mountPath: "/etc/config-volume"
    - name: secret-volume
      readOnly: true
      mountPath: "/etc/secret-volume"
